Fix: try to standardized code, adjust file structure

--- a/.editorconfig
+++ b/.editorconfig
@@ -208,7 +208,7 @@ dotnet_diagnostic.SA1217.severity = error    # Using 静态指令必须按字母
 dotnet_diagnostic.SA1119.severity = error    # 语句不应包含不必要的括号
 dotnet_diagnostic.SA1400.severity = error    # 访问修饰符必须声明
 dotnet_diagnostic.SA1401.severity = error    # 字段必须为私有
-dotnet_diagnostic.SA1402.severity = error    # 文件只能包含单个类型
+dotnet_diagnostic.SA1402.severity = warning  # 文件只能包含单个类型
 dotnet_diagnostic.SA1403.severity = error    # 文件只能包含单个命名空间
 dotnet_diagnostic.SA1404.severity = error    # 代码分析禁止显示必须有理由
 dotnet_diagnostic.SA1405.severity = error    # 调试断言必须提供消息文本
