--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ indent_style = space
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
-end_of_line = LF
+end_of_line = crlf
 
 # ============================================
 # Roslyn 规则配置
