--- a/Cyclophiops/Cyclophiops.csproj
+++ b/Cyclophiops/Cyclophiops.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Export\OutputFile.cs" />
     <Compile Include="Regedit\GetRegeditFileName.cs" />
     <Compile Include="Regedit\GetRegeditValue.cs" />
-    <Compile Include="Regedit\RegistryReaderUtil.cs" />
+    <Compile Include="Regedit\Utils\ReadRegeditList.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,7 +61,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Regedit\RegistryEnumerateResult.cs" />
     <Compile Include="Regedit\Utils\ReadRegeditValue.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
