--- a/Cyclophiops/Cyclophiops.csproj
+++ b/Cyclophiops/Cyclophiops.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Export\OutputFile.cs" />
-    <Compile Include="Regedit\GetRegeditFileName.cs" />
+    <Compile Include="Regedit\GetUserSoftwareDetail.cs" />
     <Compile Include="Regedit\GetRegeditValue.cs" />
     <Compile Include="Regedit\Utils\ReadRegeditList.cs" />
     <Compile Include="Form1.cs">
@@ -62,6 +62,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regedit\Utils\ReadRegeditValue.cs" />
+    <Compile Include="Regedit\Utils\RegistryFilter.cs" />
+    <Compile Include="Regedit\Utils\SidHelper.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
